2010-08-27  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        getPointAtLength returns incorrect values for paths closed with the closepath command
        https://bugs.webkit.org/show_bug.cgi?id=44197

        The closepath segment was traversed by the wrong direction. Swap starting point and
        end point for closeSubpath.

        Test: svg/dom/path-pointAtLength.html

        * platform/graphics/PathTraversalState.cpp:
        (WebCore::PathTraversalState::closeSubpath):
2010-08-27  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        getPointAtLength returns incorrect values for paths closed with the closepath command
        https://bugs.webkit.org/show_bug.cgi?id=44197

        Test that path gives back the correct point on a given length for the closepath segment.

        * svg/dom/path-pointAtLength-expected.txt: Added.
        * svg/dom/path-pointAtLength.html: Added.
        * svg/dom/script-tests/path-pointAtLength.js: Added.
        (pointAtLengthOfPath):


Canonical link: https://commits.webkit.org/56980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66208 268f45cc-cd09-0410-ab3c-d52691b4dbfc